--- a/revieuws.html
+++ b/revieuws.html
@@ -9,7 +9,6 @@
 
 </head>
 <body>
-
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
 
@@ -17,12 +16,12 @@
     <div class="topnav">
 
 
-        <p>T' Engeltje</p>
+        <p>Revieuws</p>
         <div id="myLinks">
+            <a href="index.html">Home</a>
             <a href="#news">Massage's</a>
             <a href="#news">Huisregels</a>
             <a href="#news">Afspraak</a>
-            <a href="revieuws.html">revieuws</a>
             <a href="#contact">Webshop</a>
             <a href="#about">Contact</a>
         </div>
@@ -44,52 +43,6 @@
 </div><br><br>
 
 
-
-<div class="w3-container">
-    <h2>Soorten Massages</h2>
-
-    <div class="w3-card-4" style="width:100%">
-        <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
-        <div class="w3-container w3-center">
-            <p class="p_tekst">KruidenMassage</p>
-            <p>€ 29,00</p>
-        </div>
-    </div>
-</div>
-
-
-<div class="grid">
-    <div>3</div>
-</div>
-
-
-<div class="w3-container">
-    <h2>Soorten Massages</h2>
-
-    <div class="w3-card-4" style="width:100%">
-        <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
-        <div class="w3-container w3-center">
-            <p class="p_tekst">KruidenMassage</p>
-            <p>€ 29,00</p>
-        </div>
-    </div>
-</div>
-
-<div class="grid">
-    <div>3</div>
-</div>
-
-<div class="w3-container">
-    <h2>Soorten Massages</h2>
-
-    <div class="w3-card-4" style="width:100%">
-        <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
-        <div class="w3-container w3-center">
-            <p class="p_tekst">KruidenMassage</p>
-            <p>€ 29,00</p>
-        </div>
-    </div>
-</div>
 
 <script>
     function myFunction() {
