--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>T' Engeltje</p>
         <div id="myLinks">
             <a href="#news">Massage's</a>
-            <a href="#news">Huisregels</a>
+            <a href="huisregels.html">Huisregels</a>
             <a href="#news">Afspraak</a>
             <a href="revieuws.html">revieuws</a>
             <a href="#contact">Webshop</a>
