--- a/revieuws.html
+++ b/revieuws.html
@@ -20,7 +20,7 @@
         <div id="myLinks">
             <a href="index.html">Home</a>
             <a href="#news">Massage's</a>
-            <a href="#news">Huisregels</a>
+            <a href="huisregels.html">Huisregels</a>
             <a href="#news">Afspraak</a>
             <a href="#contact">Webshop</a>
             <a href="#about">Contact</a>
