--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div style="padding-left:16px">
-        <h3>Vertical Mobile Navbar</h3>
+        <h3>Titel</h3>
         <p>Wij bieden lekkere massages aan</p>
         <p>Click on the hamburger menu (three bars) in the top right corner, to toggle the menu.</p>
     </div>
