--- a/revieuws.html
+++ b/revieuws.html
@@ -16,7 +16,7 @@
     <div class="topnav">
 
 
-        <p>Revieuws</p>
+        <p>Reviews</p>
         <div id="myLinks">
             <a href="index.html">Home</a>
             <a href="#news">Massage's</a>
