--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="w3-card-4" style="width:100%">
         <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
         <div class="w3-container w3-center">
-            <p class="p_tekst">KruidenMassage</p>
+            <p class="p_tekst">Kruidenstempelmassage</p>
             <p>€ 29,00</p>
         </div>
     </div>
@@ -69,8 +69,8 @@
     <div class="w3-card-4" style="width:100%">
         <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
         <div class="w3-container w3-center">
-            <p class="p_tekst">KruidenMassage</p>
-            <p>€ 29,00</p>
+            <p class="p_tekst">Ayurvedische massage</p>
+            <p>29,00</p>
         </div>
     </div>
 </div>
@@ -85,7 +85,7 @@
     <div class="w3-card-4" style="width:100%">
         <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
         <div class="w3-container w3-center">
-            <p class="p_tekst">KruidenMassage</p>
+            <p class="p_tekst">Lomi Lomi Samudra massage</p>
             <p>€ 29,00</p>
         </div>
     </div>
