--- a/index.html
+++ b/index.html
@@ -42,55 +42,110 @@
     </div>
 
     <!-- End smartphone / tablet look -->
-</div><br><br>
+</div>
+<br><br>
 
 
+<div class="container_container"><!--BEGIN VAN CONTAINERCONTAINER-->
 
-<div class="w3-container">
-    <h2>Soorten Massages</h2>
+    <div class="w3-container"><!--EINDE VAN CONTAINERCONTAINER-->
+        <h2>Soorten Massages</h2>
 
-    <div class="w3-card-4" style="width:100%">
-        <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
-        <div class="w3-container w3-center">
-            <p class="p_tekst">Kruidenstempelmassage</p>
-            <p>€ 29,00</p>
+        <div class="w3-card-4" style="width:100%">
+            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div class="w3-container w3-center">
+                <p class="p_tekst">Kruidenstempelmassage</p>
+                <p>€ 29,00</p>
+            </div>
         </div>
-    </div>
-</div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
 
 
-<div class="grid">
-    <div>3</div>
-</div>
+    <div class="grid"><!--EINDE VAN CONTAINERCONTAINER-->
+        <div>3</div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
 
 
-<div class="w3-container">
-    <h2>Soorten Massages</h2>
+    <div class="w3-container"><!--EINDE VAN CONTAINERCONTAINER-->
+        <h2>Soorten Massages</h2>
 
-    <div class="w3-card-4" style="width:100%">
-        <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
-        <div class="w3-container w3-center">
-            <p class="p_tekst">Ayurvedische massage</p>
-            <p>29,00</p>
+        <div class="w3-card-4" style="width:100%">
+            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div class="w3-container w3-center">
+                <p class="p_tekst">Ayurvedische massage</p>
+                <p>29,00</p>
+            </div>
         </div>
-    </div>
-</div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
 
-<div class="grid">
-    <div>3</div>
-</div>
+    <div class="grid"><!--EINDE VAN CONTAINERCONTAINER-->
+        <div>3</div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
 
-<div class="w3-container">
-    <h2>Soorten Massages</h2>
+    <div class="w3-container"><!--EINDE VAN CONTAINERCONTAINER-->
+        <h2>Soorten Massages</h2>
 
-    <div class="w3-card-4" style="width:100%">
-        <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
-        <div class="w3-container w3-center">
-            <p class="p_tekst">Lomi Lomi Samudra massage</p>
-            <p>€ 29,00</p>
+        <div class="w3-card-4" style="width:100%">
+            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div class="w3-container w3-center">
+                <p class="p_tekst">Lomi Lomi Samudra massage</p>
+                <p>€ 29,00</p>
+            </div>
         </div>
-    </div>
-</div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
+
+</div><!--EINDE VAN CONTAINERCONTAINER-->
+
+
+<div class="container_container"><!--BEGIN VAN CONTAINERCONTAINER-->
+
+    <div class="w3-container"><!--EINDE VAN CONTAINERCONTAINER-->
+        <h2>Soorten Massages</h2>
+
+        <div class="w3-card-4" style="width:100%">
+            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div class="w3-container w3-center">
+                <p class="p_tekst">Kruidenstempelmassage</p>
+                <p>€ 29,00</p>
+            </div>
+        </div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
+
+
+    <div class="grid"><!--EINDE VAN CONTAINERCONTAINER-->
+        <div>3</div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
+
+
+    <div class="w3-container"><!--EINDE VAN CONTAINERCONTAINER-->
+        <h2>Soorten Massages</h2>
+
+        <div class="w3-card-4" style="width:100%">
+            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div class="w3-container w3-center">
+                <p class="p_tekst">Ayurvedische massage</p>
+                <p>29,00</p>
+            </div>
+        </div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
+
+    <div class="grid"><!--EINDE VAN CONTAINERCONTAINER-->
+        <div>3</div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
+
+    <div class="w3-container"><!--EINDE VAN CONTAINERCONTAINER-->
+        <h2>Soorten Massages</h2>
+
+        <div class="w3-card-4" style="width:100%">
+            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div class="w3-container w3-center">
+                <p class="p_tekst">Lomi Lomi Samudra massage</p>
+                <p>€ 29,00</p>
+            </div>
+        </div>
+    </div><!--EINDE VAN CONTAINERCONTAINER-->
+
+</div><!--EINDE VAN CONTAINERCONTAINER-->
 
 <script>
     function myFunction() {
