--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="topnav">
 
 
-        <p>T' Engeltje</p>
+        <p class="tekst">T' Engeltje</p>
         <div id="myLinks">
             <a href="#news">Massage's</a>
             <a href="huisregels.html">Huisregels</a>
@@ -70,7 +70,7 @@
         <h2>Soorten Massages</h2>
 
         <div class="w3-card-4" style="width:100%">
-            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div><img class="photo" src="https://source.unsplash.com/1200x601"></div>
             <div class="w3-container w3-center">
                 <p class="p_tekst">Ayurvedische massage</p>
                 <p>29,00</p>
@@ -86,7 +86,7 @@
         <h2>Soorten Massages</h2>
 
         <div class="w3-card-4" style="width:100%">
-            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div><img class="photo" src="https://source.unsplash.com/1200x599"></div>
             <div class="w3-container w3-center">
                 <p class="p_tekst">Lomi Lomi Samudra massage</p>
                 <p>€ 29,00</p>
@@ -96,14 +96,14 @@
 
 </div><!--EINDE VAN CONTAINERCONTAINER-->
 
-
+<br><br>
 <div class="container_container"><!--BEGIN VAN CONTAINERCONTAINER-->
 
     <div class="w3-container"><!--EINDE VAN CONTAINERCONTAINER-->
         <h2>Soorten Massages</h2>
 
         <div class="w3-card-4" style="width:100%">
-            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div><img class="photo" src="https://source.unsplash.com/1200x598"></div>
             <div class="w3-container w3-center">
                 <p class="p_tekst">Kruidenstempelmassage</p>
                 <p>€ 29,00</p>
@@ -121,7 +121,7 @@
         <h2>Soorten Massages</h2>
 
         <div class="w3-card-4" style="width:100%">
-            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div><img class="photo" src="https://source.unsplash.com/1200x595"></div>
             <div class="w3-container w3-center">
                 <p class="p_tekst">Ayurvedische massage</p>
                 <p>29,00</p>
@@ -137,7 +137,7 @@
         <h2>Soorten Massages</h2>
 
         <div class="w3-card-4" style="width:100%">
-            <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
+            <div><img class="photo" src="https://source.unsplash.com/1000x590"></div>
             <div class="w3-container w3-center">
                 <p class="p_tekst">Lomi Lomi Samudra massage</p>
                 <p>€ 29,00</p>
@@ -150,10 +150,10 @@
 <script>
     function myFunction() {
         var x = document.getElementById("myLinks");
-        if (x.style.display === "block") {
+        if (x.style.display === "grid") {
             x.style.display = "none";
         } else {
-            x.style.display = "block";
+            x.style.display = "grid";
         }
     }
 </script>
