--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <p class="tekst">T' Engeltje</p>
         <div id="myLinks">
-            <a href="#news">Massage's</a>
+            <a href="massage.html">Massage's</a>
             <a href="huisregels.html">Huisregels</a>
             <a href="#news">Afspraak</a>
             <a href="revieuws.html">revieuws</a>
