--- a/massage.html
+++ b/massage.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="style_mobile.css" rel="stylesheet">
+    <link href="style_mobile.css" rel="stylesheet">
 
 
 </head>
 <body>
+
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
 
@@ -16,12 +18,12 @@
     <div class="topnav">
 
 
-        <p>Reviews</p>
+        <p class="tekst">T' Engeltje</p>
         <div id="myLinks">
-            <a href="index.html">Home</a>
             <a href="massage.html">Massage's</a>
             <a href="huisregels.html">Huisregels</a>
             <a href="#news">Afspraak</a>
+            <a href="revieuws.html">revieuws</a>
             <a href="#contact">Webshop</a>
             <a href="#about">Contact</a>
         </div>
@@ -40,20 +42,7 @@
     </div>
 
     <!-- End smartphone / tablet look -->
-</div><br><br>
-
-
-
-<script>
-    function myFunction() {
-        var x = document.getElementById("myLinks");
-        if (x.style.display === "block") {
-            x.style.display = "none";
-        } else {
-            x.style.display = "block";
-        }
-    }
-</script>
+</div>
 
 </body>
 </html>
