--- a/massage.html
+++ b/massage.html
@@ -10,6 +10,69 @@
 
 </head>
 <body>
+<style>
+    h2 {
+        color: #111111;
+    }
+    .columns {
+        /*float: left;*/
+        width: 90%;
+        padding: 8px;
+        margin: 0 auto;
+        box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+    }
+
+    .price {
+        list-style-type: none;
+        border: 1px solid #eee;
+        margin: 0;
+        padding: 0;
+        -webkit-transition: 0.3s;
+        transition: 0.3s;
+    }
+
+    .price:hover {
+        box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+    }
+
+    .price .header {
+        background-color: #111;
+        color: white;
+        font-size: 25px;
+    }
+
+    .price li {
+        border-bottom: 1px solid #eee;
+        padding: 20px;
+        color: black;
+        text-align: center;
+    }
+
+    .price .grey {
+        background-color: #eee;
+        font-size: 20px;
+    }
+
+    .button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 10px 25px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 18px;
+    }
+    .container_prijzen {
+        background-color: gainsboro;
+        width: 80%;
+        display: grid;
+        grid-template-columns: auto auto;
+        margin: 0 auto;
+    }
+
+</style>
+
+
 
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
@@ -18,14 +81,14 @@
     <div class="topnav">
 
 
-        <p class="tekst">T' Engeltje</p>
+       <div class="div_om_active"><p class="tekst" id="active">Massage</p></div>
         <div id="myLinks">
-            <a href="massage.html">Massage's</a>
-            <a href="huisregels.html">Huisregels</a>
-            <a href="#news">Afspraak</a>
-            <a href="revieuws.html">revieuws</a>
-            <a href="#contact">Webshop</a>
-            <a href="#about">Contact</a>
+            <a style="border-right: 1px solid black; border-bottom: 2px solid black" href="index.html">Home</a>
+            <a style="border-left: 1px solid black; border-bottom: 2px solid black" href="huisregels.html">Huisregels</a>
+            <a style="border-right: 1px solid black; border-bottom: 2px solid black" href="#news">Afspraak</a>
+            <a style="border-left: 1px solid black; border-bottom: 2px solid black" href="revieuws.html">revieuws</a>
+            <a style="border-right: 1px solid black;" href="#contact">Webshop</a>
+            <a style="border-left: 1px solid black;" href="#about">Contact</a>
         </div>
 
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -43,6 +106,83 @@
 
     <!-- End smartphone / tablet look -->
 </div>
+
+<div class="container_prijzen">
+
+
+<h2 style="text-align:center">Responsive Pricing Tables</h2>
+<p style="text-align:center">Resize the browser window to see the effect.</p>
+
+<div class="columns">
+    <ul class="price">
+        <li class="header">Ontspanningsmassage</li>
+        <li class="grey">$ 9.99 / year</li>
+        <li>10GB Storage</li>
+        <li>10 Emails</li>
+        <li>10 Domains</li>
+        <li>1GB Bandwidth</li>
+        <li class="grey"><a href="#" class="button">Sign Up</a></li>
+    </ul>
+</div>
+
+<div class="columns">
+    <ul class="price">
+        <li class="header" style="background-color:#4CAF50">Kruidenstempelmassage</li>
+        <li class="grey">$ 24.99 / year</li>
+        <li>25GB Storage</li>
+        <li>25 Emails</li>
+        <li>25 Domains</li>
+        <li>2GB Bandwidth</li>
+        <li class="grey"><a href="#" class="button">Sign Up</a></li>
+    </ul>
+</div>
+
+<div class="columns">
+    <ul class="price">
+        <li class="header">Ayurvedische massage</li>
+        <li class="grey">$ 49.99 / year</li>
+        <li>50GB Storage</li>
+        <li>50 Emails</li>
+        <li>50 Domains</li>
+        <li>5GB Bandwidth</li>
+        <li class="grey"><a href="#" class="button">Sign Up</a></li>
+    </ul>
+</div>
+
+
+<div class="columns">
+    <ul class="price">
+        <li class="header"style="background-color:#4CAF50">Lomi Lomi Samudra massage</li>
+        <li class="grey">$ 49.99 / year</li>
+        <li>50GB Storage</li>
+        <li>50 Emails</li>
+        <li>50 Domains</li>
+        <li>5GB Bandwidth</li>
+        <li class="grey"><a href="#" class="button">Sign Up</a></li>
+    </ul>
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+<script>
+    function myFunction() {
+        var x = document.getElementById("myLinks");
+        if (x.style.display === "grid") {
+            x.style.display = "none";
+        } else {
+            x.style.display = "grid";
+        }
+    }
+</script>
 
 </body>
 </html>
