--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="w3-card-4" style="width:100%">
             <div><img class="photo" src="https://source.unsplash.com/1200x600"></div>
             <div class="w3-container w3-center">
-                <p class="p_tekst">Kruidenstempelmassage</p>
+                <p class="p_tekst"><a href="ontspanningsmassage.html">Ontspanningsmassage</a></p>
                 <p>€ 29,00</p>
             </div>
         </div>
