--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="topnav">
 
 
-        <p class="tekst">T' Engeltje</p>
+        <p class="tekst"><i class="fas fa-user"></i>T' Engeltje</p>
+
         <div id="myLinks">
             <a href="massage.html">Massage's</a>
             <a href="huisregels.html">Huisregels</a>
@@ -31,6 +32,7 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
+
 
 
     </div>
