--- a/ontspanningsmassage.html
+++ b/ontspanningsmassage.html
@@ -23,10 +23,10 @@
         <div id="myLinks">
             <a href="massage.html">Massage's</a>
             <a href="huisregels.html">Huisregels</a>
-            <a href="#news">Afspraak</a>
+            <a href="afspraak.hmtl">Afspraak</a>
             <a href="revieuws.html">revieuws</a>
-            <a href="#contact">Webshop</a>
-            <a href="#about">Contact</a>
+            <a href="webshop.html">Webshop</a>
+            <a href="contact.hmtl">Contact</a>
         </div>
 
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -45,6 +45,8 @@
     <!-- End smartphone / tablet look -->
 </div>
 <br><br>
+
+
 
 
 <script>
